implement discounts
