# app/Domain/Discount/Enums/DiscountType.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace App\Domain\Discount\Enums;
+
+enum DiscountType: string
+{
+    case Percentage = 'percentage';
+    case FixedAmount = 'fixed_amount';
+    case FreeShipping = 'free_shipping';
+}
